jquery.notific8.css
/**
 * @author Will Steinmetz
 * 
 * Styles for the notific8 plug-in for jQuery
 * 
 * Copyright (c)2013, Will Steinmetz
 * Licensed under the BSD license.
 * http://opensource.org/licenses/BSD-3-Clause
 */

.jquery-notific8-container {
	display: block;
	padding: 0;
	margin: 0;
	position: fixed;
}

.jquery-notific8-container.top.right {
    top: 0;
	right: 0;
}

.jquery-notific8-container.top.left {
    top: 0;
	left: 0;
}

.jquery-notific8-container.bottom.right {
    bottom: 0;
	right: 0;
}

.jquery-notific8-container.bottom.left {
    bottom: 0;
    left: 0;
}

.jquery-notific8-notification {
    position: relative;
	display: none;
	padding: 0.625em;/* 10px/16px */
	color: #fff;
	height: 4.125em;/* 66px/16px */
	max-height: 4.125em;/* 66px/16px */
	overflow: hidden;
	border-style: solid;
    border-width: 2px;
    width: 22.88em;/* 366px/16px */
}

.right .jquery-notific8-notification {
    float: right;
    clear: right;
}

.left .jquery-notific8-notification.sticky {
    float: left;
    clear: left;
    padding-left: 2.06em;/* 33px/16px */
    width: 21.44em;/* 343px/16px */
}

.top .jquery-notific8-notification {
    margin-top: 0.625em;/* 10px/16px */
}

.bottom .jquery-notific8-notification {
    margin-bottom: 0.625em;/* 10px/16px */
}

.jquery-notific8-notification.teal {
    border-color: #09c;
	background-color: #069;
}

.jquery-notific8-notification.amethyst {
    border-color: #915faa;
	background-color: #5D2D77;
}

.jquery-notific8-notification.ruby {
    border-color: #d10;
    background-color: #a10;
}

.jquery-notific8-notification.tangerine {
    border-color: #ffb23f;
    background-color: #e88f00;
}

.jquery-notific8-notification.lemon {
    border-color: #ffde00;
    background-color: #ffcc00;
    color: #333;
}

.jquery-notific8-notification.lime {
    border-color: #38d315;
    background-color: #32b512;
}

.jquery-notific8-notification.ebony {
    border-color: #666;
	background-color: #121212;
}

.jquery-notific8-notification.smoke {
    border-color: #ababab;
	background-color: #efefef;
	color: #333;
}

.jquery-notific8-heading {
	font-weight: bold;
	margin-bottom: 0.3125em;/* 5px/16px */
}

.jquery-notific8-message {
	font-size: 0.875em;/* 14px/16px */
}

.jquery-notific8-close {
    text-align: center;
    position: absolute;
    width: 5.5625em;/* 89px/16px */
    padding: 0.125em 0;/* 2px/16px 0 */
    cursor: pointer;
    text-transform: uppercase;
}

.right .jquery-notific8-close {
    top: 1.9375em;/* 31px/16px */
    right: -2.375em;/* 38px/16px */
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

.left .jquery-notific8-close {
    top: 1.9375em;/* 31px/16px */
    left: -2.375em;/* 38px/16px */
    -webkit-transform: rotate(270deg);
    -moz-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    transform: rotate(270deg);
}

.jquery-notific8-close span {
    font-size: 0.625em;/* 10px/16px */
}

.jquery-notific8-notification.teal .jquery-notific8-close {
    background-color: #09c;
}

.jquery-notific8-notification.amethyst .jquery-notific8-close {
    background-color: #915faa;
}

.jquery-notific8-notification.ruby .jquery-notific8-close {
    background-color: #d10;
}

.jquery-notific8-notification.tangerine .jquery-notific8-close {
    background-color: #ffb23f;
}

.jquery-notific8-notification.lemon .jquery-notific8-close {
    background-color: #ffde00;
    color: #333;
}

.jquery-notific8-notification.lime .jquery-notific8-close {
    background-color: #38d315;
}

.jquery-notific8-notification.ebony .jquery-notific8-close {
    background-color: #666;
}

.jquery-notific8-notification.smoke .jquery-notific8-close {
    background-color: #ababab;
    color: #fff;
}

